--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -4,8 +4,6 @@
 name: Python package
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
   push:
     branches: [master, develop]
   pull_request:
@@ -44,8 +42,6 @@ jobs:
       - name: Test with unittest
         env:
           CONNECTION_METHOD: ${{ secrets.CONNECTION_METHOD }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-          PORT: ${{ secrets.PORT }}
-          USERNAME: ${{ secrets.USERNAME }}
+          SCRAPER_API_KEY: ${{ secrets.SCRAPER_API_KEY }}
         run: |
           python3 -m unittest -v test_module.py
